2-azure-containers/kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-echo
  labels:
    app: hello-echo
spec:
  type: LoadBalancer 
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: hello-echo
