2-azure-containers/kubernetes-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-echo
  labels:
    app: hello-echo
spec:
  type: ClusterIP 
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: hello-echo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-echo
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: hello-echo-9f889c.ce70660102d64c30b7ad.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: hello-echo
          servicePort: 80
        path: /
